--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -222,6 +222,13 @@ nav {
 	box-shadow: none;
 }
 
+.signup-main {
+	background-image: linear-gradient(45deg, slateblue 20%, transparent 20%, transparent 80%, slateblue 80%), url(../img/sign-up-welcome.png);
+	background-size: cover, 500px;
+	background-repeat: no-repeat;
+	background-position: 0 0, 10% center;
+}
+
 .product-details .crsl {
 	position: relative;
 	height: 300px;
